# ChangeLog of Nadoka($Rev$)
# $Id$ 
#

2005-05-26(Thu) 20:52:32 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix plural support bug


2005-05-26(Thu) 20:27:16 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix configuration example
	and support plural

	* plugins/rss_checkbot.nb : change bot_state format and
	separate rss check function

	* lib/rss_check.rb : return failed information if
	exception is raised


2005-05-26(Thu) 11:21:31 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/bot.rb : some refactoring


2005-05-26(Thu) 10:53:40 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/autoawaybot.nb : add configuration example
	and some refactoring


2005-05-26(Thu) 10:44:33 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/timestampbot.nb : add :client configuration
	(if true, output timestamp to clients. default: false)


2005-05-26(Thu) 10:37:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/timestampbot.nb : fix configuration example


2005-05-26(Thu) 10:29:16 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/message.nb => plugins/messagebot.nb

	* plugins/autoaway.nb => plugins/autoawaybot.nb

	* plugins/autodump.nb => plugins/autodumpbot.nb

	* plugins/sixamo.nb => plugins/sixamobot.nb

	* plugins/mailcheck.nb => plugins/mailcheckbot.nb

	* plugins/sixamobot.nb : fix configuration example


2005-05-26(Thu) 10:18:18 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/rss_check.nb => plugins/rss_checkbot.nb,

	* plugins/cron.nb => plugins/cronbot.nb

	* plugins/mailcheck.nb, plugins/modemanager.nb, plugins/weba.nb,
	plugins/drbot.nb, plugins/rss_checkbot.nb : fix configuration example


2005-05-26(Thu) 02:35:09 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/version.rb : 0.7.0


2005-05-25(Wed) 14:22:32 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/config.rb, nadokarc : change bot configuration format
	(BotConfig format)

	* ndk/config.rb : Nadoka::require is supported