@@ -1,6 +1,6 @@
 # -*-ruby-*-
 #
-# Copyright (c) 2004 SASADA Koichi <ko1 at atdot.net>
+# Copyright (c) 2004-2005 SASADA Koichi <ko1 at atdot.net>
 #
 # This program is free software with ABSOLUTELY NO WARRANTY.
 # You can re-distribute and/or modify this program under
@@ -9,6 +9,9 @@
 #
 # $Id$
 #
+
+# bot_file_name and BotClassName must be same name
+# (BotClassName.downcase == bot_file_name)
 
 class SampleBot < Nadoka::NDK_Bot
   
