@@ -2,6 +2,10 @@
 # $Id$ 
 #
 
+2005-05-26(Thu) 21:03:24 +0900  Koichi Sasada  <ko1@atdot.net>
+
+	* some files : change copyright year
+
 2005-05-26(Thu) 20:52:32 +0900  Koichi Sasada  <ko1@atdot.net>
 
 	* plugins/googlebot.nb : fix plural support bug
